# TraceGroomer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yaml
tracegroomer/: __main__.py  tidy.py  utils.py
tracegroomer/tests/: test_tidy.py  test_utils.py
